json schema inferred conversion added